welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:1: error: Missing closing brace `}' assumed here
var fini=false
^BDR2:1: error: Missing closing brace `}' assumed here
var fini=false
^BDR2:1: error: expected class or object definition
var fini=false
^BDR2:2: error: expected class or object definition
var message="" 
^BDR2:4: error: expected class or object definition
while(!fini){
^